@@ -165,25 +165,17 @@ RoboHydra.prototype.handle = function(req, res, afterHead) {
     var r = this.headForPath(req.url, afterHead);
     if (r !== undefined) {
         res.statusCode = 200;
-        try {
-            var self = this;
-            r.head.handle(req, res, function(req2, res2) {
-                if (arguments.length !== 2) {
-                    throw new InvalidRoboHydraNextParametersException(
-                        r.plugin,
-                        r.head,
-                        arguments
-                    );
-                }
-                self.handle(req2, res2, r);
-            });
-        } catch (e) {
-            if (e instanceof assert.AssertionError) {
-                res.end();
-            } else {
-                throw e;
+        var self = this;
+        r.head.handle(req, res, function(req2, res2) {
+            if (arguments.length !== 2) {
+                throw new InvalidRoboHydraNextParametersException(
+                    r.plugin,
+                    r.head,
+                    arguments
+                );
             }
-        }
+            self.handle(req2, res2, r);
+        });
     } else {
         res.statusCode = 404;
         res.send("Not Found");
@@ -321,9 +313,12 @@ RoboHydra.prototype.getAssertionFunction = function(assertion) {
             if (e instanceof assert.AssertionError) {
                 result.failures.push(message);
                 result.result = 'fail';
+                return false;
+            } else {
+                throw e;
             }
-            throw e;
         }
+        return true;
     };
 };
 RoboHydra.prototype.getModulesObject = function() {
